fixed image alignment

--- a/assets/css/style-4.css
+++ b/assets/css/style-4.css
@@ -66,6 +66,14 @@ body {
     text-decoration: underline;
 }
 
+.right-align-text {
+    text-align: right;
+}
+
+.left-align-text {
+    text-align: left;
+}
+
 /***************
 Header area CSS
 ***************/
